<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="added_to_library">Added to your library</string>
    <string name="added_to_library_song">Added %1$s to your library</string>
    <string name="album_images_item">Album images</string>
    <string name="album_tracks_list_disc_separator">Disc %1$d</string>
    <string name="alphabetical_option">Alphabetical</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="artist_all_tracks">All songs</string>
    <string name="artist_images_item">Artist images</string>
    <string name="artistview_album_count">%1$d albums</string>
    <string name="artistview_one_album">1 album</string>
    <string name="beta_settings">Beta settings</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_show_all">Show all</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="china_type_approval_permission_list_title">App needs access to:</string>
    <string name="china_type_approval_permission_wifi_mobile_data">Wi-Fi &amp; mobile data</string>
    <string name="china_type_approval_remember_selection">Remember this selection</string>
    <string name="clear_item_description_txt">Clear item</string>
    <string name="com.crashlytics.android.build_id">00000000000000000000000000000000</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="context_description_editbox_album">Album name</string>
    <string name="context_description_editbox_artist">Artist name</string>
    <string name="context_description_editbox_year">Song year</string>
    <string name="context_description_image">Edit art</string>
    <string name="delete_dialog_header">Delete artwork</string>
    <string name="delete_dialog_subheader">Delete images stored by the Music application</string>
    <string name="edit_music_info_header_album">Album</string>
    <string name="edit_music_info_header_artist">Artist</string>
    <string name="edit_music_info_header_year">Year</string>
    <string name="edit_music_info_unknown_album">Unknown album</string>
    <string name="google_drive_introduction_screen_access">Your music on Google Drive - access it from anywhere</string>
    <string name="google_drive_introduction_screen_subtitle1">- Download all your stored music</string>
    <string name="google_drive_introduction_screen_subtitle2">- Stream your music without downloading</string>
    <string name="gui_done_txt">Done</string>
    <string name="mc_edit_music_info_ics">Edit music info</string>
    <string name="media_route_menu_title">Google Cast</string>
    <string name="menu_clearaudioplus">ClearAudio+</string>
    <string name="menu_equalizer_ics">Sound enhancements</string>
    <string name="menu_quick_play">Quick play</string>
    <string name="menu_search">Search</string>
    <string name="menu_sleep_timer">Sleep timer</string>
    <string name="menu_visualizer">Visualizer</string>
    <string name="music_add_to_playlist_option">Add to playlist</string>
    <string name="music_album_option">Album</string>
    <string name="music_artist_option">Artist</string>
    <string name="music_library_add_to_play_queue_txt">Add to play queue</string>
    <string name="music_library_play_next_txt">Play next</string>
    <string name="music_library_unknown_artist_txt">Unknown artist</string>
    <string name="music_menu_delete">Delete from storage</string>
    <string name="music_menu_refresh">Refresh</string>
    <string name="music_option_show_list">Show list</string>
    <string name="music_option_sort_playlists">Manage playlists</string>
    <string name="music_playlist_edit">Edit</string>
    <string name="music_playlist_rename">Rename</string>
    <string name="music_setting_cta_app_permission_setting_description">Select which permissions the app is allowed to use</string>
    <string name="music_setting_quick_play_summary">Select what to play when pressing the Quick play button</string>
    <string name="music_settings_clear_audio_description">Unique sound setting that automatically gives more clarity to the sound</string>
    <string name="music_settings_cta_app_permission_setting_title">App permissions</string>
    <string name="music_settings_customize_header">Customize</string>
    <string name="music_settings_customize_my_library">Customize My Library</string>
    <string name="music_settings_customize_my_library_description">Choose which tabs should be visible and the order in which they should appear</string>
    <string name="music_settings_general_header">General</string>
    <string name="music_settings_google_drive_subtitle">Manage your Google Drive connection</string>
    <string name="music_settings_google_drive_title">Google Drive settings</string>
    <string name="music_settings_illumination_title">Light effects</string>
    <string name="music_settings_media_server">Media server</string>
    <string name="music_settings_media_server_summary">Share your media content (music, photos, and videos) with other home network devices.</string>
    <string name="music_settings_music_information_header">Music information</string>
    <string name="music_settings_music_quality_header">Audio quality</string>
    <string name="music_settings_personal_data_collection_subtitle">Help us make the Music application better</string>
    <string name="music_settings_personal_data_collection_title">Share personal data</string>
    <string name="music_settings_service_settings_header">Service settings</string>
    <string name="music_settings_sleep_timer_subtitle">Automatically turn off playback when the timer ends</string>
    <string name="music_settings_sleep_timer_title">Sleep timer</string>
    <string name="music_settings_sound_enhancements_description">Enhance the music experience by personalizing the sound.</string>
    <string name="music_settings_theme_description">Select a UI theme for the application</string>
    <string name="music_settings_theme_dialog_title">Set theme</string>
    <string name="music_settings_theme_title">Theme</string>
    <string name="music_settings_xperia_id">Xperia device ID</string>
    <string name="music_share_media_option">Share</string>
    <string name="music_update_notification_setting_header">About</string>
    <string name="option_view_play_queue">View play queue</string>
    <string name="overflow_delete">Delete</string>
    <string name="personal_data_collection_dialog_crash_reports_item">Crash reports (Crash events, location, etc.)</string>
    <string name="personal_data_collection_dialog_device_ids_item">Device IDs</string>
    <string name="personal_data_collection_dialog_listening_activities_item">Listening activities (time, duration, etc.)</string>
    <string name="personal_data_collection_dialog_location_item">Location</string>
    <string name="personal_data_collection_dialog_music_metadata_item">Song info (artist)</string>
    <string name="personal_data_collection_dialog_shared_with_partners_device_ids_item">Device IDs (Android ID, Android Advertising ID, etc.)</string>
    <string name="personal_data_collection_dialog_shared_with_partners_subtitle">Shared with partners:</string>
    <string name="player_options_more_about_this">More about this</string>
    <string name="pref_key_app_permissions_setting">pref_key_app_permissions_setting</string>
    <string name="pref_key_music_settings_google_drive">pref_key_music_settings_google_drive</string>
    <string name="pref_personal_data_collection">personal_data_collection</string>
    <string name="pref_theme_value_light">light</string>
    <string name="pref_xperia_id">xperia_id</string>
    <string name="setting_hardware_walkman_btn">Walkman key</string>
    <string name="setting_oss_btn">Open source licenses</string>
    <string name="sort_order_option">Sort order</string>
    <string name="update_as_you_play_setting_option_all">Wi-Fi/Mobile data</string>
    <string name="update_as_you_play_setting_option_off">Never</string>
    <string name="update_as_you_play_setting_option_wifi">Wi-Fi only</string>
    <string name="xperia_id_dialog_collection">This ID is only collected by Sony once you have agreed to share personal data with us</string>
    <string name="xperia_id_dialog_explanation">This is your Xperia identifier. It can be used to personalize some of your favorite Sony services.</string>
    <string name="xperia_id_dialog_hint">Your Xperia device ID:</string>
</resources>