<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:walkman="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/menu_option_enqueue" android:title="@string/music_library_play_next_txt" walkman:showAsAction="never" />
    <item android:id="@id/menu_option_enqueue_last" android:title="@string/music_library_add_to_play_queue_txt" walkman:showAsAction="never" />
    <item android:id="@id/menu_option_share" android:title="@string/music_share_media_option" walkman:showAsAction="never" />
    <item android:id="@id/menu_option_edit" android:title="@string/music_playlist_edit" walkman:showAsAction="never" />
    <item android:id="@id/menu_option_rename" android:title="@string/music_playlist_rename" walkman:showAsAction="never" />
    <item android:id="@id/menu_option_delete" android:title="@string/overflow_delete" walkman:showAsAction="never" />
</menu>