<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <FrameLayout android:id="@id/header_image_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/header_image" android:layout_width="fill_parent" android:layout_height="@dimen/edit_music_info_album_size" android:scaleType="centerCrop" android:contentDescription="@string/context_description_image" />
            <ImageView android:layout_gravity="end|bottom|center" android:id="@id/header_edit_indicator" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/edit_indicator" />
        </FrameLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/field_layout" android:padding="13.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/edit_header" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/EditMusicInfoTextDividerAppearanceMedium" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:id="@id/edit_artist_header" android:paddingTop="@dimen/edit_music_info_textfield_top_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/edit_music_info_header_artist" />
            <EditText android:id="@id/edit_artist" android:visibility="gone" android:nextFocusUp="@id/header_image_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/music_library_unknown_artist_txt" android:maxLines="1" android:maxLength="@integer/edit_music_info_max_text_length" android:inputType="text" android:imeOptions="actionDone" android:contentDescription="@string/context_description_editbox_artist" android:paddingStart="@dimen/edit_music_info_padding_start" android:layout_marginStart="@dimen/edit_music_info_layout_margin_start" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:id="@id/edit_album_header" android:paddingTop="@dimen/edit_music_info_textfield_top_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/edit_music_info_header_album" />
            <EditText android:id="@id/edit_album" android:visibility="gone" android:nextFocusUp="@id/header_image_container" android:nextFocusDown="@id/edit_year" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/edit_music_info_unknown_album" android:maxLines="1" android:maxLength="@integer/edit_music_info_max_text_length" android:inputType="text" android:imeOptions="actionDone" android:contentDescription="@string/context_description_editbox_album" android:paddingStart="@dimen/edit_music_info_padding_start" android:layout_marginStart="@dimen/edit_music_info_layout_margin_start" />
            <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:id="@id/edit_year_header" android:paddingTop="@dimen/edit_music_info_textfield_top_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/edit_music_info_header_year" />
            <EditText android:id="@id/edit_year" android:visibility="gone" android:nextFocusUp="@id/header_image_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLines="1" android:maxLength="@integer/edit_music_info_max_year_length" android:inputType="number" android:imeOptions="actionDone" android:contentDescription="@string/context_description_editbox_year" android:paddingStart="@dimen/edit_music_info_padding_start" android:layout_marginStart="@dimen/edit_music_info_layout_margin_start" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>