<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fadeScrollbars="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="24.0dip" android:paddingEnd="24.0dip">
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center_vertical" android:id="@id/device_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/personal_data_collection_dialog_device_ids_item" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_legal_device_id" android:layoutDirection="inherit" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center_vertical" android:id="@id/crash" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/personal_data_collection_dialog_crash_reports_item" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_legal_crash_report" android:layoutDirection="inherit" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center_vertical" android:id="@id/metadata" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/personal_data_collection_dialog_music_metadata_item" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_legal_metadata" android:layoutDirection="inherit" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center_vertical" android:id="@id/listening" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/personal_data_collection_dialog_listening_activities_item" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_legal_listening_activities" android:layoutDirection="inherit" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center_vertical" android:id="@id/location" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/personal_data_collection_dialog_location_item" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_legal_location" android:layoutDirection="inherit" />
        <TextView android:textAppearance="@style/MusicAppTextAppearanceBoldMedium" android:gravity="center_vertical" android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/personal_data_collection_dialog_shared_with_partners_subtitle" android:layoutDirection="inherit" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center_vertical" android:id="@id/shared_device_id" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/personal_data_collection_dialog_shared_with_partners_device_ids_item" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_legal_device_id" android:layoutDirection="inherit" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="center_vertical" android:id="@id/shared_crash" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="48.0dip" android:text="@string/personal_data_collection_dialog_crash_reports_item" android:drawablePadding="10.0dip" android:drawableStart="@drawable/ic_legal_crash_report" android:layoutDirection="inherit" />
    </LinearLayout>
</ScrollView>