<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingTop="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="24.0dip" android:paddingEnd="24.0dip">
        <TextView android:textSize="16.0sp" android:id="@id/hint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xperia_id_dialog_hint" />
        <TextView android:textSize="16.0sp" android:id="@id/xperia_id" android:paddingTop="10.0dip" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="16.0sp" android:id="@id/explanation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xperia_id_dialog_explanation" />
        <TextView android:textSize="16.0sp" android:id="@id/collection" android:paddingTop="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/xperia_id_dialog_collection" />
    </LinearLayout>
</ScrollView>