<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/page" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/full_screen_dialog_title_size" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/google_drive_introduction_screen_access" android:textAlignment="center" />
            <TextView android:textSize="@dimen/full_screen_dialog_main_text_size" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/google_drive_introduction_screen_subtitle2" android:textAlignment="center" />
            <TextView android:textSize="@dimen/full_screen_dialog_main_text_size" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/google_drive_introduction_screen_subtitle1" android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/sign_in_introduction_layout_footer" />
</LinearLayout>